--- a/index.html
+++ b/index.html
@@ -81,9 +81,9 @@ https://studygolang.com/dl/
 // 二进制文件包下载 wget https://golang.google.cn/dl/go1.15.4.linux-amd64.tar.gz wget https://studygolang.com/dl/golang/go1.15.4.linux-amd64.tar.gz // 源码包下载 wget https://golang.google.cn/dl/go1.15.4.src.tar.gz 2.二进制文件安装
 tar -xvzf go1.15.4.linux-amd64.tar.gz -C /usr/local 3.源码编译安装
 解压 tar -xvzf go1.15.4.src.tar.gz -C /usr/local 编译 cd /usr/local/go/src ./all.bash 4.环境配置
-export GO111MODULE=on	# enable go moudle export GOPROXY=https://goproxy.cn	# go package proxy export GOROOT=/usr/local/go	# go root directory export GOPATH=$HOME/go	# go path directory 5.测试
+vi /etc/profile 编辑文件添加下面内容： export GO111MODULE=on	# enable go moudle export GOPROXY=https://goproxy.cn	# go package proxy export GOROOT=/usr/local/go	# go root directory export GOPATH=$HOME/go	# go path directory 生效配置文件： source /etc/profile 5.测试
 显示版本信息，说明go环境搭建完成。
-&amp; go version go version go1.15.4 linux/amd64 ……
+go version go version go1.……
         </div>
         <p class="readmore"><a href="https://xiarong715.github.io/post/go%E7%8E%AF%E5%A2%83%E6%90%AD%E5%BB%BA/">阅读全文</a></p>
     </article>
