--- a/index.html
+++ b/index.html
@@ -269,7 +269,7 @@ https://studygolang.com/dl
 git环境搭建参考：
 git环境搭建
 go环境搭建参考：
-https://xiarong715.github.io/post/go%E7%8E%AF%E5%A2%83%E6%90%AD%E5%BB%BA/
+go环境搭建
 1 2 3 4 5  mkdir $HOME/src cd $HOME/src git clone https://github.com/gohugoio/hugo.git cd hugo go install --tags extended   2.Create a New Site
 1  hugo new site boke   3.Add a Theme
 1 2 3  cd boke git clone https://github.com/flysnow-org/maupassant-hugo.git themes/maupassant echo &#39;theme = &#34;maupassant&#34;&#39; &gt;&gt; config.toml   4.Add Some Content
