--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
 情绪
 ​	心情愉悦，不生气。提升思维层次，保持情绪稳定。
 禁忌
-​	忌烟忌酒。忌油腻油炸食物。
+​	忌烟忌酒。忌油腻油炸食物。忌熬夜。
   ……
         </div>
         <p class="readmore"><a href="https://xiarong715.github.io/posts/health/%E5%81%A5%E5%BA%B7%E7%A7%98%E8%AF%80-%E6%8A%A4%E8%82%9D%E5%85%BB%E8%82%BE/" target="_blank">阅读全文</a></p>
